.kube/app/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: photo
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 3002
      targetPort: 80
